--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "@sapphire/decorators": "4.2.5",
+    "@sapphire/framework": "2.3.0",
+    "@sapphire/pieces": "3.2.0",
+    "discord.js": "13.6.0",
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
