--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@sapphire/decorators": "4.2.5",
     "@sapphire/framework": "2.3.0",
     "@sapphire/pieces": "3.2.0",
-    "discord.js": "13.6.0",
-    "dotenv": "^16.0.0"
+    "discord.js": "13.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
