--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "13.6.0"
   },
   "devDependencies": {
+    "@bitomic/eslint-config": "^1.0.0",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "^16.11.26",
