--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yarn-template",
-  "version": "1.0.0",
+  "name": "@bitomic/plugin-application-commands",
+  "version": "0.0.1",
   "main": "dist/main.js",
   "author": "bitomic",
   "license": "MIT",
