chore: add files field, oops

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bitomic/plugin-application-commands",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/main.js",
   "author": "bitomic",
   "license": "MIT",
@@ -12,6 +12,9 @@
       "require": "./dist/main.js"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "hooks": "husky install .github/husky",
     "build": "rimraf tsconfig.tsbuildinfo dist && yarn tsc --listEmittedFiles --incremental",
