--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bitomic/plugin-application-commands",
   "version": "0.0.2",
-  "main": "dist/main.js",
+  "types": "./dist/main.d.ts",
   "author": "bitomic",
   "license": "MIT",
   "exports": {
