--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "rimraf": "^3.0.2",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   }
 }
