chore: add main and moddule

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@bitomic/plugin-application-commands",
   "version": "0.0.4",
+  "main": "./dist/main.js",
+  "module": "./dist/main.mjs",
   "types": "./dist/main.d.ts",
   "author": "bitomic",
   "license": "MIT",
