--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@bitomic/plugin-application-commands",
-  "version": "1.0.0",
-  "main": "./dist/main.js",
-  "module": "./dist/main.mjs",
+  "version": "0.1.0",
   "types": "./dist/main.d.ts",
   "author": "bitomic",
   "license": "MIT",
   "exports": {
     ".": {
       "import": "./dist/main.mjs",
-      "require": "./dist/main.js"
+      "require": "./dist/main.js",
+      "default": "./dist/main.js"
     },
     "./register": {
       "import": "./dist/register.mjs",
-      "require": "./dist/register.js"
+      "require": "./dist/register.js",
+      "default": "./dist/register.js"
     }
   },
   "files": [
