--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bitomic/plugin-application-commands",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "types": "./dist/main.d.ts",
   "author": "bitomic",
   "license": "MIT",
@@ -17,7 +17,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "register.d.ts"
   ],
   "scripts": {
     "hooks": "husky install .github/husky",
