--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build": "rimraf tsconfig.tsbuildinfo dist && yarn tsc --listEmittedFiles --incremental",
     "build:watch": "yarn tsc -w --incremental",
     "esm:all": "yarn esm:default && yarn esm:register",
-		"esm:default": "gen-esm-wrapper dist/main.js dist/main.mjs",
-		"esm:register": "gen-esm-wrapper dist/register.js dist/register.mjs",
+    "esm:default": "gen-esm-wrapper dist/main.js dist/main.mjs",
+    "esm:register": "gen-esm-wrapper dist/register.js dist/register.mjs",
     "lint": "eslint src/ --ext .ts --cache",
     "lint:fix": "eslint src/ --fix --ext .ts --cache",
     "start": "yarn node dist/main.js"
@@ -34,22 +34,26 @@
   "packageManager": "yarn@3.2.0",
   "dependencies": {
     "@sapphire/decorators": "4.2.5",
-    "@sapphire/framework": "2.3.0",
-    "@sapphire/pieces": "3.2.0",
-    "discord.js": "13.6.0"
+    "@sapphire/pieces": "3.2.0"
   },
   "devDependencies": {
     "@bitomic/eslint-config": "^1.0.0",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@sapphire/framework": "^2.4.1",
     "@types/node": "^16.11.26",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "discord.js": "^13.6.0",
     "eslint": "^8.10.0",
     "gen-esm-wrapper": "^1.1.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "@sapphire/framework": "*",
+    "discord.js": "*"
   }
 }
